<resources>
    <string name="app_name">Users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="email_username">Email/Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="admin">Admin</string>
    <string name="image">Image</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
</resources>