<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.saied.users.ui.auth.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_singUpFragment"
            app:destination="@id/singUpFragment" />
        <action
            android:id="@+id/action_loginFragment_to_adminFragment"
            app:destination="@id/adminFragment" />
        <action
            android:id="@+id/action_loginFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/singUpFragment"
        android:name="com.saied.users.ui.auth.singup.SignUpFragment"
        android:label="@string/signup"
        tools:layout="@layout/fragment_sign_up" />
    <fragment
        android:id="@+id/adminFragment"
        android:name="com.saied.users.ui.admin.ListFragment"
        android:label="@string/admin"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_adminFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.saied.users.ui.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" >
        <argument
            android:name="editable"
            app:argType="boolean" />
        <argument
            android:name="userId"
            app:argType="integer" />
    </fragment>
</navigation>